#19 - Removed horizontal scrollbar, and prevent scrolling to the right within the sidebar.

--- a/css/fixbootstrap.css
+++ b/css/fixbootstrap.css
@@ -43,7 +43,7 @@
     border: 1px solid transparent;
     font-size: 12px;
     line-height: 1.5;
-    border-radius: 3px
+    border-radius: 3px;
 }
 
 @font-face {
